configured Jetty Server and added HTML files